--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\PhpProject1
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/Novo_auditoria/
+url=http://localhost:1234/Novo_auditoria/
